z-index fix

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   justify-content: center;
   padding: 138px 30px 0px 30px;
   position: relative;
+  z-index: 2;
 }
 
 .image-overlay {
